--- a/docs/src/gui/qtdragon.adoc
+++ b/docs/src/gui/qtdragon.adoc
@@ -448,9 +448,9 @@ These pins could be used with HALUI to built a more frendly control panel. +
 - It can report/change the current selected Axis button. +
 - The jog rate/increments will be reported. +
 - There is a cycle start and pause pin - these call the code in QtDragon rather then the motion controller. +
-- If there are macros defined in the INI, there will be pins available the initiate them. +
+- If there are macros defined in the INI, there will be pins available to initiate them. +
 
-.Sample entry. remove '-d' to quiet debugging messages
+.Sample entry. Remove '-d' to quiet debugging messages.
 [source,{ini}]
 ----
 [HAL]
@@ -1425,8 +1425,8 @@ Scales are in percent, usually the range will be 100 - 200 in one axis. +
 Negating these scales can be used to flip the image in X, Y or both axes. +
 API comes from openCV, the available backends will be listed if -V debugging is used.
 Set to 'ANY' for opencv to choose. +
-Set resolution to DEFAULT for opencv to choose. the available resolutions 
-will be listed if -V debugging is used. +
+Set resolution to DEFAULT for opencv to choose.
+Available resolutions will be listed if -V debugging is used.
 
 [NOTE]
 The preference file can only be edited when QtDragon is not running.
