--- a/docs/src/hal/comp.adoc
+++ b/docs/src/hal/comp.adoc
@@ -2,13 +2,15 @@
 :toc:
 
 [[cha:hal-component-generator]]
-= HAL Component Generator(((HAL Component Generator)))
+= HAL Component Generator
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
 :ini: {basebackend@docbook:'':ini}
 :hal: {basebackend@docbook:'':hal}
 :ngc: {basebackend@docbook:'':ngc}
+
+(((HAL Component Generator)))
 
 == Introduction
 
