--- a/docs/src/ladder/classic-ladder.adoc
+++ b/docs/src/ladder/classic-ladder.adoc
@@ -2,13 +2,15 @@
 :toc:
 
 [[cha:cl-programming]]
-= ClassicLadder Programming(((ClassicLadder Programming,CL Programming)))
+= ClassicLadder Programming
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
 :ini: {basebackend@docbook:'':ini}
 :hal: {basebackend@docbook:'':hal}
 :ngc: {basebackend@docbook:'':ngc}
+
+(((ClassicLadder Programming,CL Programming)))
 
 == Ladder Concepts
 
