--- a/docs/src/motion/5-axis-kinematics.adoc
+++ b/docs/src/motion/5-axis-kinematics.adoc
@@ -6,13 +6,15 @@ use image:: for equation png files -- no latexmath
 ////////////////////////////////////////////////
 
 [[cha:5-axis-kinematics]]
-= 5-Axis Kinematics(((5-Axis Kinematics)))
+= 5-Axis Kinematics
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
 :ini: {basebackend@docbook:'':ini}
 :hal: {basebackend@docbook:'':hal}
 :ngc: {basebackend@docbook:'':ngc}
+
+(((5-Axis Kinematics)))
 
 == Introduction
 
