--- a/docs/src/motion/external-offsets.adoc
+++ b/docs/src/motion/external-offsets.adoc
@@ -2,13 +2,16 @@
 :toc:
 
 [[cha:external-offsets]]
-= External Axis Offsets(((externaloffsets)))
+= External Axis Offsets
+
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
 :ini: {basebackend@docbook:'':ini}
 :hal: {basebackend@docbook:'':hal}
 :ngc: {basebackend@docbook:'':ngc}
+
+(((externaloffsets)))
 
 External axis offsets are supported during teleop (world) jogs
 and coordinated (G-code) motion.  External axis offsets are
