--- a/docs/src/plasma/plasma-cnc-primer.adoc
+++ b/docs/src/plasma/plasma-cnc-primer.adoc
@@ -2,13 +2,15 @@
 :toc:
 
 [[cha:plasma-primer]]
-= Plasma Cutting Primer for LinuxCNC Users(((Plasma Cutting Primer)))
+= Plasma Cutting Primer for LinuxCNC Users
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
 :ini: {basebackend@docbook:'':ini}
 :hal: {basebackend@docbook:'':hal}
 :ngc: {basebackend@docbook:'':ngc}
+
+(((Plasma Cutting Primer)))
 
 == What Is Plasma?
 
