--- a/docs/src/user/user-foreword.adoc
+++ b/docs/src/user/user-foreword.adoc
@@ -2,8 +2,9 @@
 :toc:
 
 [[cha:user-foreword]]
-= User Foreword(((User Foreword)))
+= User Foreword
 
+(((User Foreword)))
 LinuxCNC is modular and flexible.
 These attributes lead many to see it as a confusing jumble of little things and wonder why it is the way it is.
 This page attempts to answer that question before you get into the thick of things.
