--- a/docs/src/user/user-intro.adoc
+++ b/docs/src/user/user-intro.adoc
@@ -2,7 +2,9 @@
 :toc:
 
 [[cha:linuxcnc-user-introduction]]
-= LinuxCNC User Introduction(((LinuxCNC User Introduction,User Introduction)))
+= LinuxCNC User Introduction
+
+(((LinuxCNC User Introduction,User Introduction)))
 
 == Introduction
 
@@ -89,8 +91,9 @@ the folders created by the wizard would typically contain the following files:
   It also includes a number of subfolders with G-code examples.
 
 [[sec:graphical-user-interfaces]]
-== Graphical User Interfaces(((Graphical User Interfaces)))
+== Graphical User Interfaces
 
+(((Graphical User Interfaces)))
 A graphical user interface is the part of the LinuxCNC that the machine tool operator interacts with.
 LinuxCNC comes with several types of user interfaces
 which may be chosen from by editing certain fields contained in the <<cha:ini-configuration,INI file>>:
