docs: chktex - Avoiding LaTeX warnigns

--- a/docs/src/code/contributing-to-linuxcnc.adoc
+++ b/docs/src/code/contributing-to-linuxcnc.adoc
@@ -22,7 +22,7 @@ programs and libraries, and the source text for the documentation.
 
 The two main ways that project developers communicate with each other are:
 
-* Via IRC, at irc://irc.libera.chat/%23linuxcnc-devel[#linuxcnc-devel]
+* Via IRC, at irc://irc.libera.chat/#linuxcnc-devel[#linuxcnc-devel]
   on https://libera.chat/[Libera.chat].
 * Via email, on the https://lists.sourceforge.net/lists/listinfo/emc-developers[developers' mailing list]
 
@@ -56,8 +56,8 @@ G-code programs in a directory called `$HOME/linuxcnc`, and having the
 git repo there too is confusing.
 
 Issues and pull requests (abbreviated PRs) are welcome on GitHub:
-https://github.com/LinuxCNC/linuxcnc/issues
-https://github.com/LinuxCNC/linuxcnc/pulls
+. https://github.com/LinuxCNC/linuxcnc/issues
+. https://github.com/LinuxCNC/linuxcnc/pulls
 
 === Use of Git in the LinuxCNC project
 
