docs: Mostly punctuation.

--- a/docs/src/gui/qtvcp-code-snippets.adoc
+++ b/docs/src/gui/qtvcp-code-snippets.adoc
@@ -1059,9 +1059,9 @@ You must parse and define what is accepted and what to do with it.
         self.w.camview._camNum = number
 ----
 
-== Gcode to read qt preferences
-Here is how to create an Oword program to read a qtdragon preference file entry and add it as a gcode parameter +
-Calling this oword will update the param 'toolToLoad' +
+== G-code to read Qt preferences
+Here is how to create an O-word program to read a QtDragon preference file entry and add it as a G-code parameter. +
+Calling this O-word will update the param 'toolToLoad' +
 This uses 'Python hot comment' to communicate with the embedded python instance. +
 See the Remap section of the Documents for a description.
 
