--- a/docs/src/config/python-interface.adoc
+++ b/docs/src/config/python-interface.adoc
@@ -518,8 +518,7 @@ For each joint, the following dictionary keys are available:
 
 *homed*:: (not currently implemented)
 
-*increasing*:: '(returns integer)' -
-  unclear.
+*increasing*:: '(returns integer)' - unclear.
 
 *orient_fault*:: '(returns integer)'
 
@@ -533,7 +532,7 @@ For each joint, the following dictionary keys are available:
 
 *speed*:: '(returns float)' -
   spindle speed value, rpm, > 0: clockwise, < 0: counterclockwise. +
-  With G96 active this reflects the maximum speed set by the optional G96 'D'-word or, if the 'D'-word was missing, the default values +/-1e30
+  With G96 active this reflects the maximum speed set by the optional G96 'D'-word or, if the 'D'-word was missing, the default values +/-1e30.
 
 ==  Preparing to send commands
 
