Avoid index specification in headers (smoe:docs_references) (#3631)
* docs: Keeping artifacts of a2x for debugging

* docs: chktex - Avoiding LaTeX warnigns

* docs: Attempt to reduce chktex warnings

* docs: Not having index on title line

--- a/docs/src/hal/hal-examples.adoc
+++ b/docs/src/hal/hal-examples.adoc
@@ -2,7 +2,9 @@
 :toc:
 
 [[cha:hal-examples]]
-= HAL Examples(((HAL Examples)))
+= HAL Examples
+
+(((HAL Examples)))
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
